# streamlit_auth_app_azure

./: app.py  pyproject.toml  requirements.txt
.github/workflows/: main_streamlit-azure-app.yml
testproject/: db.sqlite3
testproject/duduoi/: apps.py  urls.py  views.py
testproject/testproject/: settings.py  urls.py
